modules/gdscript/tests/scripts/runtime/errors/typed_array_assign_differently_typed.gd
func test():
	var differently: Variant = [1.0] as Array[float]
	var _typed: Array[int] = differently
	print('not ok')
